# DiagramAI

./: .gitignore  README.md  pyproject.toml  report.md  validation.rule.json
knowledge/eraser_docs/: cloud_components.md  connections.md  examples.md  syntax.md  workflows.md
output/: diagram.json  extacted_text.json  finalEraserCode.md  pdf_text.json
src/architecturegeneration/: crew.py  main.py
src/architecturegeneration/config/: agents.yaml  tasks.yaml
src/architecturegeneration/tools/: custom_tool.py
