[project]
name = "architecturegeneration"
version = "0.1.0"
description = "ArchitectureGeneration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
architecturegeneration = "architecturegeneration.main:run"
run_crew = "architecturegeneration.main:run"
train = "architecturegeneration.main:train"
replay = "architecturegeneration.main:replay"
test = "architecturegeneration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
